plugins {
    id 'idea'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'idea'

    version = project.mod_version
    group = project.mod_group_id
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8

    repositories {
        mavenCentral()
        maven { url = 'https://maven.minecraftforge.net/' }
        maven { url = 'https://maven.fabricmc.net/' }
        maven { url = 'https://maven.parchmentmc.org' }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        if (JavaVersion.current().isJava9Compatible()) {
            options.release.set(8)
        }
    }
}
